--- a/src/Assignment-1/assignment1.html
+++ b/src/Assignment-1/assignment1.html
@@ -13,8 +13,32 @@
 
 	<!-- This is just a comment. Ignore this line.-->
 	<!-- Start your code from here -->
-	
-	
+	<div class="parent">
+		<span class="child">
+			<ul>
+				<li>List Item 1</li>
+				<li>List Item 2</li>
+				<li>List Item 3</li>
+				<ul>
+					<li>List Item 3.1</li>
+					<li>List Item 3.2</li>
+				</ul>
+			</ul>
+		</span>
+		<span class="child">
+			<img src="./images/img1.jpg" width="100%" height="auto"/>
+		</span>
+	</div>
+	<div class="parent">
+		
+		<span class="child">
+			<img src="./images/img2.jpg" width="100%" height="auto" />
+		</span>
+		<span class="child">
+			<h1>Largest Community of photo enthusiasnes</h1>
+		</span>
+		
+	</div>
 	<!-- End your code -->
 
 	</div>
